added arrays and objects

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 		<h3>This class is full of classy people learning about classes</h3>
 	</div>
 
+	<div id="demo"></div>
+
 <script type="text/javascript" src="javascripts/main.js"></script>
 </body>
 </html>
